# BudgetBuddy

./: CMakeLists.txt  HOW_TO_RUN.txt  README.md  analyzereport.cpp  analyzereport.h  analyzereport.ui  changepassword.cpp  changepassword.h  databasemanager.cpp  databasemanager.h  forgotpassword.cpp  forgotpassword.h  homepage.cpp  homepage.h  homepage.ui  login.cpp  login.h  login.ui  main.cpp  monthlygoals.cpp  monthlygoals.h  monthlygoals.ui  profilepage.cpp  profilepage.h  profilepage.ui  resources.qrc  signup.cpp  signup.h  signup.ui  transactions.cpp  transactions.h  transactions.ui  viewtransactions.cpp  viewtransactions.h  viewtransactions.ui
CPPs/: changepassword.cpp
Header Files/: changepassword.h  profilepage.h  signup.h
Source Codes/: analyzereport.cpp  login.cpp  main.cpp  viewtransactions.cpp
UIs/: analyzereport.ui  homepage.ui  login.ui
